--- a/index.css
+++ b/index.css
@@ -1,36 +1,57 @@
-#banner {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  background: rgb(255, 192, 255);
-  height: 12rem;
-  padding: 1rem;
-  font-size: 200%;
-}
-
 #background {
   background-image: url("img/tennis-ball-pattern.jpg");
   background-repeat: repeat;
   background-size: 25%;
+  background-attachment: fixed;
+}
+
+#banner {
+  margin: auto;
+  width: 30%;
+  height: auto;
+  border: 3px solid rgb(0, 0, 0);
+  padding: 10px;
+  background: rgb(255, 192, 255);
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 30px;
+  font-size: 30px;
+  border-radius: 15px;
 }
 
 #container {
   margin: 0 auto;
-  background-color: gray;
+  background-color: rgba(0, 195, 255, 0.945);
   text-align: center;
   justify-content: center;
-  width: 75%;
-  padding: 100px, 100px, 100px, 100px;
+  width: 35%;
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 15px;
 }
 
-#picture-container {
+#doggo-img {
   margin: 0 auto;
-  height: 500px;
-  width: 500px;
+  height: 300px;
+  width: auto;
 }
 
-#rating-form {
+#add-likes {
+  margin: 10px auto;
 }
 
 #submit-dog {
+  margin: 10px auto;
+}
+
+#next-dog {
+  margin-top: 15px;
+}
+
+#like-value {
+  font-size: 30px;
+}
+
+img {
+  height: 100%;
+  width: auto;
 }
