--- a/index.css
+++ b/index.css
@@ -45,6 +45,15 @@
   width: auto;
 }
 
+.dog-card {
+  width: 150px;
+  height: 120px;
+  padding: 20px;
+  font-size: 15px;
+  display: inline-grid;
+  border-radius: 15px;
+}
+
 .doggo-filler-img {
   margin: 0 auto;
   height: 300px;
@@ -64,10 +73,12 @@
 
 #like-value {
   font-size: 30px;
+  font-family: "Comic Sans MS", "Comic Sans", monospace;
 }
 
 img {
   height: 100%;
   width: auto;
-  border: 5px solid rgb(255, 192, 255);
+  border-radius: 15px;
+  box-shadow: 10px 7px rgb(255, 192, 255);
 }
